# ci_cd_base

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt  README.md  filter_coverage.sh  setup_cicd.sh  test_runner.sh  west.yml
.github/workflows/: ci-backup.yml  ci-cd.yml  ci.yml  codeql.yml  dependabot.yml  docker-build-scheduled.yml  docker-build.yml  static-analysis.yml
app/: CMakeLists.txt  prj.conf  prj_release.conf
app/src/: main.c
my_blinky/: README.md
my_blinky/src/: led_driver.c  led_driver.h
my_blinky/tests/: testcase.yaml
my_blinky/tests/src/: led_driver_mock.c  led_driver_test.h
scripts/: requirements.txt
src/: main.c
tests/: CMakeLists.txt  coverage.conf  prj.conf  testcase.yaml
tests/hardware/: conftest.py  test_gpio.py
tests/src/: test_led.c
tests/unit/: CMakeLists.txt  prj.conf
tests/unit/src/: test_main.c
